--- a/AoE_imgui_DE.vcxproj
+++ b/AoE_imgui_DE.vcxproj
@@ -150,8 +150,6 @@
     <ClInclude Include="Classes.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="CustomLoadingScreen.h" />
-    <ClInclude Include="DetourHook64.h" />
-    <ClInclude Include="detours.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="ESP.h" />
     <ClInclude Include="Feature.h" />
@@ -174,11 +172,11 @@
     <ClInclude Include="ResourceInformation.h" />
     <ClInclude Include="SDK.h" />
     <ClInclude Include="Utility.h" />
+    <ClInclude Include="VmtHook.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="CustomLoadingScreen.cpp" />
-    <ClCompile Include="DetourHook64.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="ESP.cpp" />
     <ClCompile Include="Feature.cpp" />
@@ -197,6 +195,7 @@
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="ResourceInformation.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="VmtHook.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
