--- a/AoE_imgui_DE.vcxproj
+++ b/AoE_imgui_DE.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CastleManager.h" />
     <ClInclude Include="Classes.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="CustomLoadingScreen.h" />
@@ -168,14 +169,17 @@
     <ClInclude Include="MinimapText.h" />
     <ClInclude Include="Offsets.h" />
     <ClInclude Include="Patcher.h" />
+    <ClInclude Include="PauseManager.h" />
     <ClInclude Include="RelicManager.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="ResourceInformation.h" />
     <ClInclude Include="SDK.h" />
+    <ClInclude Include="ThreadsafeQueue.h" />
     <ClInclude Include="Utility.h" />
     <ClInclude Include="VmtHook.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CastleManager.cpp" />
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="CustomLoadingScreen.cpp" />
     <ClCompile Include="Debug.cpp" />
@@ -193,6 +197,7 @@
     <ClCompile Include="MinimapText.cpp" />
     <ClCompile Include="Offsets.cpp" />
     <ClCompile Include="Patcher.cpp" />
+    <ClCompile Include="PauseManager.cpp" />
     <ClCompile Include="RelicManager.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="ResourceInformation.cpp" />
