Added Config system to save/load settings

--- a/AoE_imgui_DE.vcxproj.filters
+++ b/AoE_imgui_DE.vcxproj.filters
@@ -117,13 +117,16 @@
     <ClInclude Include="Debug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PauseManager.h">
-      <Filter>Header Files\Feature</Filter>
-    </ClInclude>
     <ClInclude Include="CastleManager.h">
       <Filter>Header Files\Feature</Filter>
     </ClInclude>
     <ClInclude Include="ThreadsafeQueue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OneVsOne.h">
+      <Filter>Header Files\Feature</Filter>
+    </ClInclude>
+    <ClInclude Include="Config.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -194,11 +197,14 @@
     <ClCompile Include="Debug.cpp">
       <Filter>Source Files\Feature</Filter>
     </ClCompile>
-    <ClCompile Include="PauseManager.cpp">
-      <Filter>Source Files\Feature</Filter>
-    </ClCompile>
     <ClCompile Include="CastleManager.cpp">
       <Filter>Source Files\Feature</Filter>
+    </ClCompile>
+    <ClCompile Include="OneVsOne.cpp">
+      <Filter>Source Files\Feature</Filter>
+    </ClCompile>
+    <ClCompile Include="Config.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
