--- a/AoE_imgui_DE.vcxproj
+++ b/AoE_imgui_DE.vcxproj
@@ -167,12 +167,14 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
+    <ClInclude Include="InitialiseOffsets.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="MidfunctionHook.h" />
     <ClInclude Include="MinimapText.h" />
     <ClInclude Include="Offsets.h" />
     <ClInclude Include="OneVsOne.h" />
     <ClInclude Include="Patcher.h" />
+    <ClInclude Include="Pattern.h" />
     <ClInclude Include="RelicManager.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="ResourceInformation.h" />
@@ -197,11 +199,13 @@
     <ClCompile Include="imgui\imgui_impl_dx11.cpp" />
     <ClCompile Include="imgui\imgui_impl_win32.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
+    <ClCompile Include="InitialiseOffsets.cpp" />
     <ClCompile Include="MidfunctionHook.cpp" />
     <ClCompile Include="MinimapText.cpp" />
     <ClCompile Include="Offsets.cpp" />
     <ClCompile Include="OneVsOne.cpp" />
     <ClCompile Include="Patcher.cpp" />
+    <ClCompile Include="Pattern.cpp" />
     <ClCompile Include="RelicManager.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="ResourceInformation.cpp" />
