--- a/AoE_imgui_DE.vcxproj.filters
+++ b/AoE_imgui_DE.vcxproj.filters
@@ -76,6 +76,12 @@
     <ClCompile Include="FeatureManager.cpp">
       <Filter>source\features</Filter>
     </ClCompile>
+    <ClCompile Include="Pattern.cpp">
+      <Filter>source\util</Filter>
+    </ClCompile>
+    <ClCompile Include="InitialiseOffsets.cpp">
+      <Filter>source\features</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes.h">
@@ -170,6 +176,12 @@
     </ClInclude>
     <ClInclude Include="Utility.h">
       <Filter>header\util</Filter>
+    </ClInclude>
+    <ClInclude Include="Pattern.h">
+      <Filter>header\util</Filter>
+    </ClInclude>
+    <ClInclude Include="InitialiseOffsets.h">
+      <Filter>header\features</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
